--- a/less/header.less
+++ b/less/header.less
@@ -139,7 +139,7 @@
                         visibility: visible;
                     }
                     >.panel-title{
-                        position: relative;
+                        position: absolute;
                         h3{
                             margin-top: 0;
                             margin-bottom: 0;
