--- a/less/utilities.less
+++ b/less/utilities.less
@@ -156,13 +156,16 @@
 
 //#$Panel
 .panel-wrapper{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
     background-color: @header-child-menu-panel-bg-color;
     overflow: hidden;
     .panel-title{
+        position: absolute;
+        top: 0;
         height: 65px;
         color: @ice-blue;
         font-weight: normal;
@@ -171,6 +174,9 @@
         text-align: center;    
     }
     .panel-content{
+        width: 100%;
+        position: absolute;
+        top: 65px;
         padding-top: 30px;
         padding-bottom: 30px;
         background-color: @header-child-menu-panel-bg-color;
